--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "aws-cdk-lib": "2.121.1",
     "constructs": "^10.3.0",
+    "dotenv": "^16.4.5",
     "source-map-support": "^0.5.21"
   }
 }
